bug: refreshing bug

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
     "normalizr": "^3.2.3",
+    "query-string": "^5.0.0",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
