--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "query-string": "^5.0.0",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.3",
+    "react-confirm-bootstrap": "^3.1.4",
     "react-dom": "^15.6.1",
     "react-moment": "^0.6.5",
     "react-redux": "^5.0.6",
